Development Portal (2021-09-24 shi)
==============================
Update print-friendly css
Remove sorting for result tables


Development Portal (2021-09-23 shi)
==============================
Fix css for participating-org id alignment
Display comments for results data
Update facet value type css
Update facet separator
Update result comment layout into tabs
Update SAVi css


Development Portal (2021-08-07 shi)
==============================
Update reference column for participating-org in SAVi
Update hover titles for participating-org reference, crs and activity-id
Update hover titles for transaction provider/receiver activity-id


Development Portal (2021-08-02 shi)
==============================
Update activity list column names to Total Commitment
Update all instances of 'outgoing commitments' to 'total 
commitments' in footer
Add new section about Total Commitment in Project list in main footer
Add translations for all languages
Update old reference and text in main footer
Update old reference and text translations for all languages


Development Portal (2021-07-24 shi)
==============================
Add stats link to d-preview
Update d-preview footer layout
Update d-preview css


Development Portal (2021-06-24 shi)
==============================
Update csv download description for aid


Development Portal (2021-06-23 shi)
==============================
Update crs-add section in SAVi
Include code number for code name column
Update css for crs-add section
Display empty-description when applicable for channel-code
Add CSV download description table for map view
Add translations for all languages
Update css for new CSV download table on map view


Development Portal (2021-06-22 shi)
==============================
Fix crs-add/other-flags SAVi view


Development Portal (2021-05-28 shi)
==============================
Fix typo for dquery ctrl+enter run
Add link to dquery documentation how to


Development Portal (2021-05-20 shi)
==============================