@@ -1,3 +1,9 @@
+Development Portal (2021-11-14 shi)
+==============================
+Fix budget end date column width in SAVi
+Fix Dash snapshots table text wrapping
+
+
 Development Portal (2021-09-24 shi)
 ==============================
 Update print-friendly css
